[package]
name = "esbat"
version = "0.1.0"
description = "Functions for lunar phase calculations"
authors = ["iliana destroyer of worlds <iliana@buttslol.net>"]
license = "CC-BY-NC-4.0"
repository = "https://github.com/iliana/esbat"
keywords = ["moon", "lunar", "astronomy"]
categories = ["date-and-time"]
edition = "2018"

[[example]]
name = "lunarcal"
required-features = ["clock"]

[features]
clock = ["chrono/clock"]

[dependencies]
chrono = { version = "0.4", default-features = false }
